# embassy-neorv32

./: .gitignore  Cargo.toml  README.md
embassy-neorv32/: Cargo.toml
embassy-neorv32/examples/: Cargo.toml  memory.x  run-bl  run-sim
embassy-neorv32/examples/.cargo/: config.toml
embassy-neorv32/examples/embassy/: Cargo.toml
embassy-neorv32/examples/embassy/.cargo/: config.toml
embassy-neorv32/examples/riscvrt/: Cargo.toml
embassy-neorv32/examples/riscvrt/.cargo/: config.toml
embassy-neorv32/src/: chip.rs  clint.rs  dma.rs  gpio.rs  gptmr.rs  lib.rs  pwm.rs  spi.rs  sysinfo.rs  time_driver.rs  trng.rs  twi.rs  uart.rs  wdt.rs
neorv32-pac/: Cargo.toml  README.md  build.rs  config.yml  device.x  lib.rs  neorv32.svd
neorv32-pac/src/: cfs.rs  clint.rs  dma.rs  gpio.rs  gptmr.rs  interrupt.rs  lib.rs  neoled.rs  onewire.rs  pwm.rs  sdi.rs  slink.rs  spi.rs  sysinfo.rs  tracer.rs  trng.rs  twd.rs  twi.rs  uart0.rs  wdt.rs
neorv32-pac/src/cfs/: reg0.rs  reg1.rs  reg10.rs  reg11.rs  reg12.rs  reg13.rs  reg14.rs  reg15.rs  reg16.rs  reg17.rs  reg18.rs  reg19.rs  reg2.rs  reg20.rs  reg21.rs  reg22.rs  reg23.rs  reg24.rs  reg25.rs  reg26.rs  reg27.rs  reg28.rs  reg29.rs  reg3.rs  reg30.rs  reg31.rs  reg32.rs  reg33.rs  reg34.rs  reg35.rs  reg36.rs  reg37.rs  reg38.rs  reg39.rs  reg4.rs  reg40.rs  reg41.rs  reg42.rs  reg43.rs  reg44.rs  (+24 more)
neorv32-pac/src/clint/: mswi0.rs  mtime_hi.rs  mtime_low.rs  mtimecmp0_hi.rs  mtimecmp0_low.rs
neorv32-pac/src/dma/: ctrl.rs  desc.rs
neorv32-pac/src/gpio/: irq_enable.rs  irq_pending.rs  irq_polarity.rs  irq_type.rs  port_in.rs  port_out.rs
neorv32-pac/src/gptmr/: count.rs  ctrl.rs  thres.rs
neorv32-pac/src/neoled/: ctrl.rs  data24.rs  data32.rs  strobe.rs
neorv32-pac/src/onewire/: ctrl.rs  dcmd.rs
neorv32-pac/src/pwm/: channel_cfg0.rs
neorv32-pac/src/sdi/: ctrl.rs  data.rs
neorv32-pac/src/slink/: ctrl.rs  data.rs  data_last.rs  route.rs
neorv32-pac/src/spi/: ctrl.rs  data.rs
neorv32-pac/src/sysinfo/: cache.rs  clk.rs  mem.rs  soc.rs
neorv32-pac/src/tracer/: ctrl.rs  delta_dst.rs  delta_src.rs  stop_addr.rs
neorv32-pac/src/trng/: ctrl.rs  data.rs
neorv32-pac/src/twd/: ctrl.rs  data.rs
neorv32-pac/src/twi/: ctrl.rs  dcmd.rs
neorv32-pac/src/uart0/: ctrl.rs  data.rs
neorv32-pac/src/wdt/: ctrl.rs  reset.rs
