[package]
name = "embassy-neorv32"
version = "0.1.0"
edition = "2024"
authors = ["Kurtis Dinelle <kurtis.dinelle@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtjd/embassy-neorv32"

[features]
defmt = ["dep:defmt"]

[dependencies]
critical-section = "1.2.0"
defmt = { version = "1.0.1", optional = true }
embassy-futures = "0.1.2"
embassy-hal-internal = "0.3.0"
embassy-sync = "0.7.2"
# Note: CLINT MTIMER always runs at CPU freq, thus this needs to match CPU FREQ
# So maybe just don't put feature here and force user to include it in bin?
embassy-time-driver = { version = "0.2.1", features = ["tick-hz-100_000_000"] }
embassy-time-queue-utils = "0.3.0"
pac = { package = "neorv32-pac", path = "../neorv32-pac", features = [
    "rt",
    "critical-section",
] }
# TODO: Don't use this if target has A extension
portable-atomic = { version = "1.11.1", default-features = false, features = [
    "unsafe-assume-single-core",
] }
riscv = { version = "0.15.0", features = ["critical-section-single-hart"] }
riscv-rt = "0.16.0"
