[workspace]

[package]
name = "neorv32-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-executor = { version = "0.9.1", features = [
    "arch-riscv32",
    "executor-thread",
] }
embassy-neorv32 = { path = "../" }
# Note: CLINT MTIMER always runs at CPU freq, thus this needs to match CPU FREQ
# But CPU freq is configurable, so defer tick rate choice to binary
embassy-time = { version = "0.5.0", features = ["tick-hz-100_000_000"] }
embassy-sync = "0.7.2"
riscv = "0.15.0"
riscv-rt = "0.16.0"
panic-halt = "1.0.0"
